--- a/index.html
+++ b/index.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Web Integrator Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f9f9f9;
-    }
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 20px;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: none;
-      border-radius: 8px;
-    }
-    .integrator-id {
-      margin-bottom: 15px;
-      font-weight: bold;
-      color: #333;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="integrator-id">
-      Web Integrator ID: <span id="integratorId">KTWf8etwVA98ygwh7Mc1D-PCyjdctBNB</span>
-    </div>
-    <iframe src="https://sjc6fshth1lhi3p.eu.qlikcloud.com/single/?appid=8251564e-11f6-497d-bf2e-29a997c55895&sheet=89e46399-c4a5-4c61-8c7e-91944285fe51&theme=sense&opt=ctxmenu,currsel" title="Embedded Content"></iframe>
-  </div>
-</body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script type="text/javascript">
+      const webIntegrationId = "KTWf8etwVA98ygwh7Mc1D-PCyjdctBNB";
+      function login() {
+        function isLoggedIn() {
+          return fetch("https://sjc6fshth1lhi3p.eu.qlikcloud.com/api/v1/users/me", {
+            method: 'GET',
+            mode: 'cors',
+            credentials: 'include',
+            headers: {
+              'Content-Type': 'application/json',
+              'qlik-web-integration-id': webIntegrationId,
+            },
+          }).then(response => {
+            return response.status === 200;
+          });
+        }
+        
+        return isLoggedIn().then(loggedIn => {
+          if (!loggedIn) {
+            // check login
+              window.top.location.href = "https://sjc6fshth1lhi3p.eu.qlikcloud.com/login?qlik-web-integration-id=" + webIntegrationId + "&returnto=" + top.location.href;
+            throw new Error('not logged in');
+          }
+        });
+        
+      }
+      login()
+    </script>
+  </head>
+  
+  <body style="height:600px;">
+    <iframe src="https://sjc6fshth1lhi3p.eu.qlikcloud.com/single/?appid=4f368d3f-e4f4-40d0-8171-bd2a3e266f44&sheet=89e46399-c4a5-4c61-8c7e-91944285fe51&theme=sense&opt=ctxmenu,currsel&select=$::PROJECT_STATUS,ACTIVE" style="border:none;width:100%;height:100%;"></iframe>
+  </body>
 </html>
